--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,56 @@
 <title>Login Page</title>
 </head>
 <body>
+<div >
+<div style="height:150px;width:100%"> Header </div>
 Hello
+<div style="height:350px;width:100%">
+<div style="width:25%;float:left"> Links </div>
+<div style="width:75%;float:Right"> About Dr.Jyothirmayi Degree College (DJDC) Campus
+<p>Dr.Jyothirmayi Degree College was established in the year 1997, under the patronage 
+of Sri Balaji Educational Society inorder to  meet the educational demands in 
+the growing communities of Adoni. as the community grew, so did Dr.Jyothirmayi Degree College. 
+the college was governed by the Sri Balaji Educational Scoiety.
+The 1st foundation stone is laid by our beloved M.L.A Sri.k.Meenakshi Naidu on 1st may 1997 and the college building was 
+inaugurated by prof.P.R.Naidu (Vice-Chancellor of S.K.University, Anantapur) on 28th February 1998.  Dr.Jyothirmayi Degree College was conceived and created beside the Ramjala road, 
+which is one of the pride places of the Adoni town which will be the resource for water 
+supplied road in 1997. 12months later the college inaugurated and quickly became the 
+pride of the community. Long-term residents as well as aspiring 
+young immigrants attended the college to realize their dreams.</p>
+
+<p>When the college opened its doors in 1997, it did so with only 15 
+faculties and 150 students, but all were dedicated to a future-oriented 
+philosophy. from a remarkable beginning to a bright, promising future, 
+Dr.Jyothirmayi Degree College continues to move forward in welcoming new and 
+future students seeking to enrich their lives and prosper through higher education. 
+Now it has extended its strength of students up to 900 with aroundly 60 faculties.</p>
+
+<p>With its mountains and valleys, Dr.Jyothirmayi Degree College is nature's 
+gift to professional education. it is located in a sprawling campus of 9 acres in 
+Adoni town, close to kurnool-bellary highway, and just 30 kms from mantralayam which 
+is one of the famous holy temples in A.P. The college is situated on a lush green 
+hilly plot, consisting of fossil rocks in a serene and tranquil atmosphere, provides 
+the necessary emotional and intellectual inspiration and sustenance to the students and 
+teachers. Dr.Jyothirmayi Degree College, which has come to be synonymously pronounced 
+with great by the discerning observers and admirers.</p>
+
+<p> the decade, Dr.jyothirmayi Degree College has become known state-wide for academic 
+excellence. The college's curriculum and mission also has expanded to include career, 
+community, continuing and adult education programs. The college renews that commitment 
+at the beginning of the 21st century with a series of renovations and upgrades that 
+ensure the college will continue to be the pride of the community for future generations.</p>
+
+<p>In these 17 years of college history it earns so many awards and rewards from 
+district-wise and state-wise. The institution offering the best professional 
+education with constantly evolving curriculum and latest teaching methodologies. 
+Its mission is to create a learning society which is central to economic well being. 
+The college has been providing training for individuals and organizations aimed at 
+maximizing efficiency and potential in their particular field. Quality training in 
+diverse fields of business management, soft skills and self development is their forte.</p>
+</div>
+</div>
+
+<div style="height: 150px;width:100%">Footer</div>
+</div>
 </body>
 </html>
